重要更新说明：
修改了一些页面逻辑

重构了一个init.sh 用于简化安装

--- a/templates/admin/workflow/project/inference/tab_1_facts.html
+++ b/templates/admin/workflow/project/inference/tab_1_facts.html
@@ -25,7 +25,7 @@
 
             <div class="mt-4 border-t pt-4 flex justify-start">
                 <button type="submit" class="button variant-primary">
-                  启动“角色属性识别”任务
+                  ▶️ 启动“角色属性识别”任务
                 </button>
             </div>
         </div>
