--- a/templates/admin/workflow/project/inference/tab_2_rag.html
+++ b/templates/admin/workflow/project/inference/tab_2_rag.html
@@ -13,7 +13,7 @@
         </p>
 
         <button type="submit" class="button variant-primary">
-          启动“知识图谱部署”任务
+          ▶️ 启动“知识图谱部署”任务
         </button>
     </div>
 
